--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@babel/runtime": "^7.0.0-beta.36",
     "bcrypt": "^1.0.3",
     "meteor-node-stubs": "^0.3.2",
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-mounter": "^1.2.0"
   }
 }
